  The later enables changing style.css files on the fly.


MINOR FEATURES

* `notes` is a function that allows the user to view a truncated version of the 
  notes located in the ARTICLES directory.

* `BV` a function, bibliography viewer, that allows the user to view their 
  bibliographies stored in the .bib file.

* New templates `wordpress_rmd`, `hw_rmd` and `hw_rnw` have been added.

* `SC` a function to quickly generate special HTML characters.

* `PN` a function to quickly add presenter notes to an HTML slide.

* `HR`, `HR2` `BT` and `EM` functions for quick html hyperrefs, button hyperrefs 
  and email hyperrefs..

* spacing functions `HS` (horizontal space) and `VS` (vertical space) have been 
  added.

* `CN` a new function that wraps text with courier new HTML a font tag for 
  supplied text.

* `WP` a convenience function for formulating Windows paths correctly.

* `slidify_layouts` function to generate html files for extra slidify slide 
  layouts.  By default `new_report` and `presentation` will utilize
  `slidify_layouts` to generate the appropriate files.

* The project creating functions (`presentation`, `new_report` and 
  `new_vignette`) gain an `open` argument to open the directory in RStudio after 
  it has been created.

* `is.global` is a function used to test if the environment is the global 
  environment.

* `local_host` and `run_lh` functions both create a .sh/.bat file to open a 
  presentation with a local host.  `run_lh` will also run the file.  This is
  particularly useful with the reveal.js presentation frame work for viewing 
  slide notes without an Internet connection. (Thanks to Dason Kurkiewicz for
  creating the .sh/.bat files generated by these functions).


IMPROVEMENTS

* `GQ`, `CA`, `LL` and `US` parse out both "fi" and "fl" ligatures more 
  effectively, whereas previously "fi" was assumed if a ligature was detected.

* `new_report` now allows global options to be set that allows numeric values to 