@@ -1,0 +1,9 @@
+Template: brew.min
+Date: 2013-09-07
+Doc Type: rmd
+Author: Who wrote it
+Maintainer: Who to complain to <yourfault@somewhere.net>
+Description: What are the unique settings/features of your template
+License: What license is it under?
+Presentation: rmd
+Outline: rmd 
